--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nenado/watch-missing-node-modules-plugin": "^1.0.2",
+    "@types/react-router": "^5.1.8",
+    "iframe-resizer-react": "^1.0.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-mdl": "^1.11.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "react-sky": "^1.1.0",
+    "react-typical": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
