--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@nenado/watch-missing-node-modules-plugin": "^1.0.2",
     "@types/react-router": "^5.1.8",
     "iframe-resizer-react": "^1.0.4",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.4.0",
+    "react-dark-mode-toggle": "0.0.9",
+    "react-dom": "^16.4.0",
     "react-mdl": "^1.11.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-sky": "^1.1.0",
-    "react-typical": "^0.1.3"
+    "react-typical": "^0.1.3",
+    "toggle": "^1.0.1",
+    "use-dark-mode": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
